<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.albertoruvel.credit.app.NewCreditCardActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="New credit card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="24dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginBottom="48dp"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/newCreditCardMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/newCreditCardName"
                    android:inputType="textCapSentences"
                    android:hint="@string/newCreditCardNameMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginBottom="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/newCreditCardAnnualFee"
                    android:inputType="numberDecimal"
                    android:hint="@string/newCreditCardAnnualFeeMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginBottom="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/newCreditCardAllowedSalary"
                    android:inputType="numberDecimal"
                    android:hint="@string/newCreditCardAllowedSalaryMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_marginBottom="24dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight=".3"
                    style="@style/AppTheme.Dark.TextView"
                    android:text="@string/newCreditCardPeriodDateMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/newCreditCardPeriodDate"
                    android:layout_weight=".7"
                    android:text="@string/newCreditCardMonthlyPeriodDateMessage"
                    style="@style/AppTheme.WhiteButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="72dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight=".3"
                    style="@style/AppTheme.Dark.TextView"
                    android:text="@string/newCreditCardPayDateMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/newCreditCardPayDate"
                    android:layout_weight=".7"
                    android:text="@string/newCreditCardMonthlyPayDateMessage"
                    style="@style/AppTheme.WhiteButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
