<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.albertoruvel.credit.app.SignupActivity">

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:layout_marginBottom="24dp"
            android:layout_width="54dp"
            android:layout_height="54dp" />

        <android.support.design.widget.TextInputLayout
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/AppTheme.Dark.TextView"
            app:hintEnabled="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/signupName"
                style="@style/AppTheme.Dark.EditText"
                android:inputType="textCapSentences"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/AppTheme.Dark.TextView"
            app:hintEnabled="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/signupLastName"
                style="@style/AppTheme.Dark.EditText"
                android:inputType="textCapSentences"
                android:hint="@string/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/AppTheme.Dark.TextView"
            app:hintEnabled="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/signupEmail"
                style="@style/AppTheme.Dark.EditText"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@style/AppTheme.Dark.TextView"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/signupPassword"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/signupButton"
            android:text="@string/signup"
            android:padding="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
