<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.albertoruvel.credit.app.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/settingsMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- notification layout, must be gone before starting activity -->
            <LinearLayout
                android:id="@+id/settingsNotificationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="vertical"
                android:visibility="gone">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="4dp"
                    app:contentPadding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/settingsNotificationMessage"
                            style="@style/AppTheme.InfoTextView"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginBottom="8dp"
                            android:layout_weight=".7"
                            android:text=""
                            android:textSize="14sp" />

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/settingsNotificationDismissButton"
                            style="@style/AppTheme.PrimaryButton"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="end"
                            android:layout_weight=".3"
                            android:text="@string/dismiss" />
                    </LinearLayout>


                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="4dp"
                    app:contentPadding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="32dp"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/AppTheme.InfoTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight=".3"
                                android:text="@string/name" />

                            <TextView
                                android:id="@+id/settingsName"
                                style="@style/AppTheme.SubTitleTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight=".7"
                                android:gravity="end" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="24dp"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/AppTheme.InfoTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight=".3"
                                android:text="@string/email" />

                            <TextView
                                android:id="@+id/settingsEmail"
                                style="@style/AppTheme.SubTitleTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight=".7"
                                android:gravity="end" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/AppTheme.InfoTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight=".3"
                                android:text="@string/monthlyIncome" />

                            <EditText
                                android:id="@+id/settingsMonthlyIncome"
                                style="@style/AppTheme.EditText.Number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight=".7"
                                android:gravity="right"
                                android:hint="i.e. 25,000" />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="4dp"
                    app:contentPadding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/settingsManageCreditCards"
                            style="@style/AppTheme.InfoTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="24dp"
                            android:text="@string/manageCreditCards" />

                        <Switch
                            android:id="@+id/settingsNotifications"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/receiveNotifications"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/settingsDeleteData"
                style="@style/AppTheme.DangerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/deleteData" />

            <TextView
                android:id="@+id/settingsBadRated"
                style="@style/AppTheme.TitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/noLikeIt"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
